// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Config Data Source must load global variables 1`] = `
Config {
  "ALGOLIA": Object {
    "API_KEY": "CHURCH_ALGOLIA_API_KEY",
    "APPLICATION_ID": "CHURCH_ALGOLIA_APPLICATION_ID",
  },
  "ANALYTICS": Object {},
  "BIBLE_API": Object {
    "KEY": "123456abc",
  },
  "CLOUDINARY": Object {},
  "COMPOUND_ENV_VALUE": "undefined and then undefined",
  "CONTENT_IDS": Array [
    1,
    5,
    null,
  ],
  "DATABASE_URL": "postgres/default",
  "ROCK": Object {
    "API_TOKEN": null,
    "API_URI": "https://apollosrock.newspring.cc/api",
    "INCLUDE_CONTENT_TYPES": null,
    "NULL_VALUE": null,
  },
  "ROCK_CONSTANTS": Object {},
  "ROCK_MAPPINGS": Object {
    "CONTENT_ITEM": Object {},
  },
  "_yml": Object {
    "ALGOLIA": Object {
      "API_KEY": "CHURCH_ALGOLIA_API_KEY",
      "APPLICATION_ID": "CHURCH_ALGOLIA_APPLICATION_ID",
    },
    "COMPOUND_ENV_VALUE": "\${SOME_VALUE} and then \${ANOTHER_VALUE}",
    "CONTENT_IDS": Array [
      1,
      5,
      "\${CONTENT_ID_FROM_ENV}",
    ],
    "DATABASE_URL": "\${DATABASE_URL}",
    "ROCK": Object {
      "API_TOKEN": "\${ROCK_TOKEN}",
      "API_URI": "https://apollosrock.newspring.cc/api",
      "INCLUDE_CONTENT_TYPES": "\${AN_ARRAY_OF_STRINGS}",
      "NULL_VALUE": null,
    },
  },
  "config": Object {
    "ALGOLIA": Object {
      "API_KEY": "CHURCH_ALGOLIA_API_KEY",
      "APPLICATION_ID": "CHURCH_ALGOLIA_APPLICATION_ID",
    },
    "ANALYTICS": Object {},
    "BIBLE_API": Object {
      "KEY": "123456abc",
    },
    "CLOUDINARY": Object {},
    "COMPOUND_ENV_VALUE": "undefined and then undefined",
    "CONTENT_IDS": Array [
      1,
      5,
      null,
    ],
    "DATABASE_URL": "postgres/default",
    "ROCK": Object {
      "API_TOKEN": null,
      "API_URI": "https://apollosrock.newspring.cc/api",
      "INCLUDE_CONTENT_TYPES": null,
      "NULL_VALUE": null,
    },
    "ROCK_CONSTANTS": Object {},
    "ROCK_MAPPINGS": Object {
      "CONTENT_ITEM": Object {},
    },
  },
}
`;

exports[`Config Data Source must merge configs giving priority to the church config 1`] = `
Config {
  "ALGOLIA": Object {
    "API_KEY": "CHURCH_ALGOLIA_API_KEY",
    "APPLICATION_ID": "CHURCH_ALGOLIA_APPLICATION_ID",
  },
  "ANALYTICS": Object {},
  "BIBLE_API": Object {
    "KEY": "SHARED_BIBLE_API_KEY",
  },
  "BUGSNAG": Object {
    "API_KEY": "SHARED_BUGSNAG_API_KEY",
  },
  "CLOUDINARY": Object {
    "URL": "SHARED_CLOUDINARY_URL",
  },
  "COMPOUND_ENV_VALUE": "undefined and then undefined",
  "CONTENT_IDS": Array [
    1,
    5,
    null,
  ],
  "DATABASE_URL": null,
  "ROCK": Object {
    "API_TOKEN": null,
    "API_URI": "https://apollosrock.newspring.cc/api",
    "INCLUDE_CONTENT_TYPES": null,
    "NULL_VALUE": null,
  },
  "ROCK_CONSTANTS": Object {},
  "ROCK_MAPPINGS": Object {
    "CONTENT_ITEM": Object {},
  },
  "SENDGRID": Object {
    "API_KEY": "SHARED_SENDGRID_API_KEY",
  },
  "TWILIO": Object {
    "ACCOUNT_SID": "SHARED_TWILIO_SID",
    "AUTH_TOKEN": "SHARED_TWILIO_AUTH",
    "FROM_NUMBER": "SHARED_TWILIO_FROM",
  },
  "_yml": Object {
    "ALGOLIA": Object {
      "API_KEY": "CHURCH_ALGOLIA_API_KEY",
      "APPLICATION_ID": "CHURCH_ALGOLIA_APPLICATION_ID",
    },
    "COMPOUND_ENV_VALUE": "\${SOME_VALUE} and then \${ANOTHER_VALUE}",
    "CONTENT_IDS": Array [
      1,
      5,
      "\${CONTENT_ID_FROM_ENV}",
    ],
    "DATABASE_URL": "\${DATABASE_URL}",
    "ROCK": Object {
      "API_TOKEN": "\${ROCK_TOKEN}",
      "API_URI": "https://apollosrock.newspring.cc/api",
      "INCLUDE_CONTENT_TYPES": "\${AN_ARRAY_OF_STRINGS}",
      "NULL_VALUE": null,
    },
  },
  "config": Object {
    "ALGOLIA": Object {
      "API_KEY": "CHURCH_ALGOLIA_API_KEY",
      "APPLICATION_ID": "CHURCH_ALGOLIA_APPLICATION_ID",
    },
    "ANALYTICS": Object {},
    "BIBLE_API": Object {
      "KEY": "SHARED_BIBLE_API_KEY",
    },
    "CLOUDINARY": Object {
      "URL": "SHARED_CLOUDINARY_URL",
    },
    "COMPOUND_ENV_VALUE": "undefined and then undefined",
    "CONTENT_IDS": Array [
      1,
      5,
      null,
    ],
    "DATABASE_URL": null,
    "ROCK": Object {
      "API_TOKEN": null,
      "API_URI": "https://apollosrock.newspring.cc/api",
      "INCLUDE_CONTENT_TYPES": null,
      "NULL_VALUE": null,
    },
    "ROCK_CONSTANTS": Object {},
    "ROCK_MAPPINGS": Object {
      "CONTENT_ITEM": Object {},
    },
  },
}
`;
